--- a/tecolotl-web/src/main/webapp/administracion/catalogo.xhtml
+++ b/tecolotl-web/src/main/webapp/administracion/catalogo.xhtml
@@ -20,7 +20,7 @@
                 <div class="uk-container uk-container-expand">
                     <div class="" uk-grid="">
                         <div class="uk-width-1-2">
-                            <div uk-grid="">
+                            <div uk-grid="">catalogoControlador.tipoContactos
                                 <div class="uk-width-auto"><span uk-icon="icon: ban; ratio: 2"></span></div>
                                 <div class="uk-width-expand">
                                     <h3 class="uk-text-uppercase">#{mensaje['catalog.blockingreason']}</h3>
