--- a/tecolotl-web/src/main/webapp/administracion/detalle-escuela.xhtml
+++ b/tecolotl-web/src/main/webapp/administracion/detalle-escuela.xhtml
@@ -133,7 +133,7 @@
 
 					<h2 class="uk-heading-line uk-text-center"><span>#{mensaje['school-details.contact']}</span></h2>
 
-
+					<h:panelGroup id="panel-contacto">
 					<h:dataTable id="tabla-escuela-detalle"
 								 value="#{escuelaDetalleControlador.escuelaDetalleDto.contactoDtoList}"
 								 var="contacto"
@@ -141,12 +141,14 @@
 								 headerClass="uk-background-primary uk-dark"
 								 rendered="#{not empty escuelaDetalleControlador.escuelaDetalleDto.contactoDtoList}"	>
 						<h:column>
-							<f:facet name="header" >#{mensaje['school-details.table.name']}</f:facet>
+							<f:facet name="header" >
+								#{mensaje['school-details.table.name']}
+							</f:facet>
 							#{contacto.nombre}
 						</h:column>
 						<h:column>
 							<f:facet name="header">#{mensaje['school-details.table.type']}</f:facet>
-							#{contacto.tipo}
+							#{contacto.tipoContactoDto.descripcion}
 						</h:column>
 						<h:column>
 							<f:facet name="header">#{mensaje['school-details.table.phone']}</f:facet>
@@ -161,10 +163,10 @@
 										<h:form>
 											<li><a href="#"><span uk-icon="icon: file-edit" class="uk-margin-small-right uk-icon" ></span>  <span class="uk-text-middle">#{mensaje['school-details.table.option.edit']}</span></a></li>
 											<li>
-												<h:commandLink>
+												<h:commandLink  pt:uk-toggle="target: #modal-elimina-contacto" >
 													<span uk-icon="icon: trash" class="uk-margin-small-right uk-icon" ></span>
 													<span class="uk-text-middle">#{mensaje['school-details.table.option.delete']}</span>
-													<f:ajax listener="#{escuelaDetalleControlador.actualiza(contacto)}" render="modal-elimina-contacto" onevent="abrirModalEliminar"/>
+													<f:ajax listener="#{escuelaDetalleControlador.actualiza(contacto)}"  />
 												</h:commandLink>
 											</li>
 										</h:form>
@@ -173,9 +175,9 @@
 							</div>
 						</h:column>
 					</h:dataTable>
-					<h:panelGroup rendered="#{empty escuelaDetalleControlador.escuelaDetalleDto.contactoDtoList}">
+					<h:panelGroup id="panel-vacio" rendered="#{empty escuelaDetalleControlador.escuelaDetalleDto.contactoDtoList}">
 						 <table class="uk-table uk-table-middle uk-table-hover uk-table-striped  ">
-							 <thead class=" limite" >
+							 <thead>
 							 <tr class=" uk-border-rounded">
 							 	<th class="uk-background-primary uk-dark ">#{mensaje['school-details.table.name']}</th>
 							 	<th class="uk-background-primary uk-dark">#{mensaje['school-details.table.type']}</th>
@@ -193,8 +195,9 @@
 					<div class="uk-flex uk-flex-right uk-margin">
 						<button class="uk-button uk-button-primary uk-border-rounded" uk-toggle="target: #modal-contacto"><h:outputText value="#{mensaje['button.add']}"/></button>
 					</div>
+					</h:panelGroup>
 					<div id="modal-contacto"  uk-modal="">
-					   	<div class="uk-contacto">
+					   	<div class="uk-modal-dialog">
 							<button class="uk-modal-close-default" type="button" uk-close=""></button>
 							<div class="uk-modal-header">
 								<h2 class="uk-modal-title uk-text-center">#{mensaje['school-details.new']}</h2>
@@ -243,6 +246,7 @@
 														label="#{mensaje['school-details.table.phone']}">
 													<f:validateRequired/>
 													<f:validateLength minimum="7" maximum="20"/>
+
 												</h:inputText>
 											</div>
 										</div>
@@ -254,7 +258,7 @@
 								<div class="uk-modal-footer uk-text-right">
 									<button class="uk-button uk-button-default uk-modal-close uk-margin-small-right" type="button"><h:outputText value="#{mensaje['button.cancel']}"/></button>
 									<h:commandButton styleClass="uk-button uk-button-primary uk-border-rounded" value="#{mensaje['button.accept']}">
-										<f:ajax listener="#{escuelaDetalleControlador.insertar}" execute="@form" render="@form"/>
+										<f:ajax listener="#{escuelaDetalleControlador.insertar}" execute="@form" render="@form panel-contacto modal-contacto" onevent="actualiza"/>
 									</h:commandButton>
 								</div>
 							</h:form>
@@ -269,7 +273,7 @@
 							</div>
 							<div class="uk-modal-body">
 								<p>
-									Esta seguro que desea a elminiar el contacto: #{escuelaDetalleControlador.contactoDtoModelo.nombre}
+									Esta seguro que desea a elminiar el contacto: #{contacto.nombre}
 								</p>
 							</div>
 							<div class="uk-modal-footer uk-flex uk-flex-right">
@@ -278,15 +282,36 @@
 									<h:commandButton
 											styleClass="uk-button uk-button-danger uk-modal-close uk-border-rounded"
 											value="#{mensaje['button.remove']}">
-										<f:ajax listener="#{}" onevent="actualiza"/>
+										<f:ajax listener="#{escuelaDetalleControlador.eliminar}" render="panel-contacto" onevent="actualiza"/>
 									</h:commandButton>
 								</h:form>
 							</div>
 						</div>
-					</div>
+					</div>	1
 				</div>
 			</div>
 		</div>
+		<script type="text/javascript">
+		document.addEventListener("DOMContentLoaded", function (evt) {
+			limpiarSelector("undefined");
+		});
+		function limpiarSelector(informacion) {
+			if (informacion === "undefined") {
+				document.getElementById('formulario-agregar-contacto:seleccion-tipo-contacto').removeAttribute('size');
+			} else {
+				if (informacion.status == 'success') {
+					document.getElementById('formulario-agregar-contacto:seleccion-tipo-contacto').removeAttribute('size');
+				}
+			}
+		}
+
+		function actualiza(data) {
+			if (data.status === 'success') {
+				document.getElementById('formulario-actualiza:boton-actualizar').click();
+			}
+		}
+	</script>
+
 	</ui:define>
 </ui:composition>
 
